Add: List of orders and other fixes
